environments/dev/apps/app-openshift-taxi/services/openshift-taxi/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: openshift-taxi
    app.kubernetes.io/part-of: app-openshift-taxi
  name: openshift-taxi
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openshift-taxi
      app.kubernetes.io/part-of: app-openshift-taxi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: openshift-taxi
        app.kubernetes.io/part-of: app-openshift-taxi
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: openshift-taxi
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
