environments/dev/apps/app-openshift-taxi/services/openshift-taxi/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: openshift-taxi
    app.kubernetes.io/part-of: app-openshift-taxi
  name: openshift-taxi
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: openshift-taxi
    app.kubernetes.io/part-of: app-openshift-taxi
status:
  loadBalancer: {}
