environments/dev/apps/app-openshift-taxi/services/openshift-taxi/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: openshift-taxi
  namespace: dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: openshift-taxi
    weight: 100
  wildcardPolicy: None
